native/include/dart_monty.h

/* ------------------------------------------------------------------ */
/* Opaque handle                                                      */
/* ------------------------------------------------------------------ */

/** Opaque handle to a compiled Python program. */
typedef struct MontyHandle MontyHandle;
/* ------------------------------------------------------------------ */
/* Enums                                                              */
/* ------------------------------------------------------------------ */

/** Result tag for monty_run(). */
typedef enum {
    MONTY_RESULT_OK    = 0,
    MONTY_RESULT_ERROR = 1,
} MontyResultTag;
/** Progress tag for monty_start() / monty_resume(). */
typedef enum {
    MONTY_PROGRESS_COMPLETE        = 0,
    MONTY_PROGRESS_PENDING         = 1,
    MONTY_PROGRESS_ERROR           = 2,
    MONTY_PROGRESS_RESOLVE_FUTURES = 3,
    MONTY_PROGRESS_OS_CALL         = 4,
    MONTY_PROGRESS_NAME_LOOKUP     = 5,
} MontyProgressTag;
/* ------------------------------------------------------------------ */
/* Run to completion                                                  */
/* ------------------------------------------------------------------ */

/**
 * Run Python code to completion.
 *
 * @param handle       Valid handle from monty_create().
 * @param result_json  Receives heap-allocated JSON result string.
 *                     Caller frees with monty_string_free(). May be NULL.
 * @param error_msg    Receives heap-allocated error message on failure,
 *                     or NULL on success. Caller frees with monty_string_free().
 * @return             MONTY_RESULT_OK or MONTY_RESULT_ERROR.
 */
MontyResultTag monty_run(MontyHandle *handle,
                          char **result_json,
                          char **error_msg);
/* ------------------------------------------------------------------ */
/* Iterative execution                                                */
/* ------------------------------------------------------------------ */

/**
 * Start iterative execution. Pauses at external function calls.
 *
 * @param handle     Valid handle from monty_create().
 * @param out_error  Receives error message on failure. Caller frees.
 * @return           MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
 */
MontyProgressTag monty_start(MontyHandle *handle,
                              char **out_error);
/**
 * Resume execution with a return value.
 *
 * @param handle      Handle in PENDING state.
 * @param value_json  NUL-terminated JSON value to return to Python.
 * @param out_error   Receives error message on failure. Caller frees.
 * @return            MONTY_PROGRESS_COMPLETE, _PENDING, or _ERROR.
 */
MontyProgressTag monty_resume(MontyHandle *handle,
                               const char *value_json,
                               char **out_error);
/* ------------------------------------------------------------------ */
/* Snapshots                                                          */
/* ------------------------------------------------------------------ */

/**
 * Serialize compiled code to a byte buffer (snapshot).
 * Only valid in Ready state.
 *
 * @param handle   Valid handle.
 * @param out_len  Receives byte count.
 * @return         Heap-allocated byte buffer, or NULL. Caller frees with monty_bytes_free().
 */
uint8_t *monty_snapshot(const MontyHandle *handle,
                         size_t *out_len);
/* ------------------------------------------------------------------ */
/* REPL (stateful session)                                            */
/* ------------------------------------------------------------------ */

/** Opaque handle to a persistent REPL session. */
typedef struct MontyReplHandle MontyReplHandle;
/**
 * Free a REPL handle. Safe to call with NULL or an already-freed handle.
 */
void monty_repl_free(MontyReplHandle *handle);
char *monty_repl_os_call_args_json(const MontyReplHandle *handle);
char *monty_repl_os_call_kwargs_json(const MontyReplHandle *handle);
uint32_t monty_repl_os_call_id(const MontyReplHandle *handle);
char *monty_repl_complete_result_json(const MontyReplHandle *handle);
int monty_repl_complete_is_error(const MontyReplHandle *handle);
char *monty_repl_pending_future_call_ids(const MontyReplHandle *handle);
/* ------------------------------------------------------------------ */
/* REPL snapshots                                                     */
/* ------------------------------------------------------------------ */

/**
 * Serialise a REPL handle's heap to postcard bytes.
 *
 * @param handle     Non-null REPL handle in Idle or Complete state.
 * @param out_len    Receives the byte count on success.
 * @param out_error  On failure, receives error string (free with monty_string_free()).
 *                   May be NULL if the caller does not want the reason.
 * @return           Heap-allocated bytes (free with monty_bytes_free()), or NULL on error.
 */
uint8_t *monty_repl_snapshot(const MontyReplHandle *handle,
                             size_t *out_len,
                             char **out_error);
/**
 * Restore a REPL handle from postcard bytes produced by monty_repl_snapshot().
 *
 * @param data         Pointer to snapshot bytes (not consumed by this call).
 * @param len          Byte count.
 * @param limits_json  Limits to APPLY to the restored session, or NULL to keep
 *                     whatever the snapshot carried. A snapshot restores the
 *                     limits of the session it was taken from, so a caller who
 *                     wants their own MUST pass them here — otherwise the
 *                     restored session silently runs under the old ones.
 * @param ext_fns      Comma-separated external function names to re-register,
 *                     or NULL for none. A snapshot CANNOT carry these; they
 *                     live on the handle, not in monty's MontyRepl.
 * @param out_error    On failure, receives error string (free with monty_string_free()).
 * @return             New REPL handle (free with monty_repl_free()), or NULL on error.
 */
MontyReplHandle *monty_repl_restore(const uint8_t *data,
                                    size_t len,
                                    const char *limits_json,
                                    const char *ext_fns,
                                    char **out_error);
/* ------------------------------------------------------------------ */
/* Memory management                                                  */
/* ------------------------------------------------------------------ */

/** Free a string returned by any monty_* function. Safe with NULL. */
void monty_string_free(char *ptr);
/** Free a byte buffer returned by monty_snapshot(). Safe with NULL. */
void monty_bytes_free(uint8_t *ptr, size_t len);