lib/src/ffi/generated/dart_monty_bindings.dart


@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyReplHandle>)>()
external ffi.Pointer<ffi.Char> monty_repl_os_call_args_json(
  ffi.Pointer<MontyReplHandle> handle,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyReplHandle>)>()
external ffi.Pointer<ffi.Char> monty_repl_os_call_kwargs_json(
  ffi.Pointer<MontyReplHandle> handle,
);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<MontyReplHandle>)>()
external int monty_repl_os_call_id(
  ffi.Pointer<MontyReplHandle> handle,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyReplHandle>)>()
external ffi.Pointer<ffi.Char> monty_repl_complete_result_json(
  ffi.Pointer<MontyReplHandle> handle,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<MontyReplHandle>)>()
external int monty_repl_complete_is_error(
  ffi.Pointer<MontyReplHandle> handle,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<MontyReplHandle>)>()
external ffi.Pointer<ffi.Char> monty_repl_pending_future_call_ids(
  ffi.Pointer<MontyReplHandle> handle,
);

/// Serialise a REPL handle's heap to postcard bytes.
///
/// @param handle   Non-null REPL handle in Idle or Complete state.
/// @param out_len  Receives the byte count on success.
/// @return         Heap-allocated bytes (free with monty_bytes_free()), or NULL on error.
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.Pointer<MontyReplHandle>,
    ffi.Pointer<ffi.Size>,
  )
>()
external ffi.Pointer<ffi.Uint8> monty_repl_snapshot(
  ffi.Pointer<MontyReplHandle> handle,
  ffi.Pointer<ffi.Size> out_len,
);

/// Restore a REPL handle from postcard bytes produced by monty_repl_snapshot().
///
/// @param data       Pointer to snapshot bytes (not consumed by this call).
/// @param len        Byte count.
/// @param out_error  On failure, receives error string (free with monty_string_free()).
/// @return           New REPL handle (free with monty_repl_free()), or NULL on error.
@ffi.Native<
  ffi.Pointer<MontyReplHandle> Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external ffi.Pointer<MontyReplHandle> monty_repl_restore(
  ffi.Pointer<ffi.Uint8> data,
  int len,
  ffi.Pointer<ffi.Pointer<ffi.Char>> out_error,
);

/// Free a string returned by any monty_* function. Safe with NULL.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void monty_string_free(
  ffi.Pointer<ffi.Char> ptr,
);

/// Free a byte buffer returned by monty_snapshot(). Safe with NULL.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>()
external void monty_bytes_free(
  ffi.Pointer<ffi.Uint8> ptr,
  int len,
);

final class MontyHandle extends ffi.Opaque {}

/// Result tag for monty_run().
enum MontyResultTag {
  MONTY_RESULT_OK(0),
  MONTY_RESULT_ERROR(1)
  ;

  final int value;
  const MontyResultTag(this.value);

  static MontyResultTag fromValue(int value) => switch (value) {
    0 => MONTY_RESULT_OK,
    1 => MONTY_RESULT_ERROR,
    _ => throw ArgumentError('Unknown value for MontyResultTag: $value'),
  };
}

/// Progress tag for monty_start() / monty_resume().
enum MontyProgressTag {
  MONTY_PROGRESS_COMPLETE(0),
  MONTY_PROGRESS_PENDING(1),
  MONTY_PROGRESS_ERROR(2),
  MONTY_PROGRESS_RESOLVE_FUTURES(3),
  MONTY_PROGRESS_OS_CALL(4),
  MONTY_PROGRESS_NAME_LOOKUP(5)
  ;

  final int value;
  const MontyProgressTag(this.value);

  static MontyProgressTag fromValue(int value) => switch (value) {
    0 => MONTY_PROGRESS_COMPLETE,
    1 => MONTY_PROGRESS_PENDING,
    2 => MONTY_PROGRESS_ERROR,
    3 => MONTY_PROGRESS_RESOLVE_FUTURES,
    4 => MONTY_PROGRESS_OS_CALL,
    5 => MONTY_PROGRESS_NAME_LOOKUP,
    _ => throw ArgumentError('Unknown value for MontyProgressTag: $value'),
  };
}

final class MontyReplHandle extends ffi.Opaque {}
